# aws-saa03

./: .gitignore  README.md
.github/workflows/: test.yaml
backend/: docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 050b17ce78b7_create_attempts_table.py  5d5329ea22f1_add_bilingual_columns_to_questions_and_.py  db3251323fc3_create_initial_tables.py
backend/api/: db.py  main.py  models.py  schemas.py
backend/api/routers/: attempts.py  health.py  questions.py
backend/data/: question_bilingual_11_25.json  question_bilingual_25-65.json  questions.json  questions_bilingual.json  questions_en_1.json
backend/scripts/: translate_and_import.py
frontend/src/app/quiz/: page.tsx
frontend/src/app/summary/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: quiz.ts
scripts/: issues.sh
